--- a/DisruptersVSBlockingQueue/pom.xml
+++ b/DisruptersVSBlockingQueue/pom.xml
@@ -20,5 +20,17 @@
       <artifactId>disruptor</artifactId>
       <version>4.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.openjdk.jmh</groupId>
+      <artifactId>jmh-core</artifactId>
+      <version>1.37</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.openjdk.jmh</groupId>
+      <artifactId>jmh-generator-annprocess</artifactId>
+      <version>1.37</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
